Kubernetes/apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  ports:
    - name: http
      port: 6767
      targetPort: http
  selector:
    app: bazarr
