Kubernetes/apps/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.nerine.dev`)
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
